--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "hexlet-hello-world",
+  "name": "hexlet",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
